Fixed some busted grains. Also added warnings if you're too high or low.

--- a/pages/lautering-calculator/components/grain-card/grain-card.scss
+++ b/pages/lautering-calculator/components/grain-card/grain-card.scss
@@ -47,7 +47,6 @@
 
 	.dropdown-wrapper {
 		.dropdown-toggle {
-			margin-bottom: 10px;
 			background: #fff;
 		}
 	}
